nginx/nginx_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
  namespace: park-test
spec:
  selector:
    app: nginx
  type: LoadBalancer
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
      nodePort: 30000
