nginx/nginx_ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: nginx-ingress
  namespace: park-test
spec:
  rules:
  - host: parktest.com
    http:
      paths:
      - backend:
          serviceName: nginx-service
          servicePort: 80
